--- a/templates/public/landing/landing_copy.html
+++ b/templates/public/landing/landing_copy.html
@@ -421,59 +421,42 @@
                         <div id="tab1" class="tab_single_content">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <p><b>Dear Authors,</b> <br>
-                                        We would like to congratulate you for the acceptance of your paper. Your
-                                        contribution will be very important for the academic community. However, to
-                                        formalize the publication of your document on IET editorial, you need to comply
-                                        with 2 phases, and submit your final version by February 16, 2025:
+                                    <h4>Camera-Ready Guidelines</h4>
+                                    <p><b>Important: </b> Before preparing your final submission, please download and
+                                        carefully review the
+                                        complete <b><a href="/static/camera_ready_guidelines.pdf" target="_blank" class="btn-link text-primary">Guidelines
+                                            Document</a></b>, which contains all detailed formatting and
+                                        submission requirements.
                                     </p>
-                                    <ol>
-                                        <li>Paper style adjustment according to the IET conference paper template
-                                        </li>
-                                        <li>Final version submission to CMT platform</li>
-                                    </ol>
-                                    <h4>Phase 1. Paper style adjustment according to the IET conference paper
-                                        template</h4>
-                                    <p><b>1.</b> At this stage it is needed to adjust the paper style according to the
-                                        IET
-                                        format: Title, Authors, Affiliation and Keywords, see Figure 1. Note that:
-                                    </p>
-                                    <ol>
-                                        <li>Both title and keywords and in CAPITAL LETTERS</li>
-                                        <li>Authors are in <b>bold letters</b> and italic letters</li>
-                                        <li>Affiliations are in italic letters</li>
-                                    </ol>
-                                    <p><b>2. </b>Please, be attentive to the information of the authors and
-                                        affiliations.</p>
-                                    <p><b>3. </b>Use the IET reference style. Some examples are provided in the Word
-                                        template.
-                                        Users of Latex/Overleaf are strongly suggested to use the .bst file included in
-                                        the Latex template, which is ready for using the \bibliographystyle environment.
-                                        For example:</p>
-                                    <p><b>4. </b>Consider that you must adhere to the <b>Page Length</b></p>
-                                    <p>The paper should be between <b>4 and 6</b> double-column pages. Beyond this
-                                        length, a
-                                        charge per additional page will be applied. The maximum number of pages allowed
-                                        is <b>8</b>.</p>
-                                    <p>Please, go to the Menu <b>“For Authors/Templates”</b>. Papers without
-                                        following the required formatting will not be published in the conference
-                                        proceedings.</p>
-                                    <h4>Phase 2. Final version submission on CMT platform</h4>
-                                    <p><b>1. </b>Login to the submission center <b>CMT through the ICTIAIR 2025 web
-                                        page</b> in the Menu <b>“For Authors/ Submit your
-                                        paper”</b>, or
-                                        go directly on <a href="https://shorturl.at/5roLU" target="_blank"
-                                                          class="btn-link">https://shorturl.at/5roLU</a></p>
-                                    <p><b>2. </b>Once the formatting issues are solved and the reviewers’ suggestions
-                                        are included, if apply, click on the <b>“create camera ready submission”</b>
-                                        button</p>
-                                    <p><b>3. </b>Update your author information in the space in Figure 4, if needed,
-                                        such as title, abstract, author information. Note that on this point, <b>only
-                                            minor changes are allowed </b>in this metadata</p>
-                                    <p><b>4. </b> inally, upload your final version and submit it.
-                                        You can upload from 1 to 3 files. Maximum file size is 3 Mb. We accept <b>doc,
-                                            docx, pdf</b> formats
-                                    </p>
+                                    <h4>Key Information for Submission</h4>
+                                    <h4>Required Files (in order of submission)</h4>
+                                    <p><b>1. Source Files (LaTeX or Word) </b></p>
+                                    <ul>
+                                        <li>Download templates: <b><a href="/static/iet.bst" download="iet.bst" class="btn-link text-primary">LaTeX Template</a></b>  <b><a href="/static/ictiair25_word_Template%20(1).docx" download="word_template.docx" class="btn-link text-primary ps-1">Word Template</a></b> </li>
+                                        <li>LaTeX: Submit all source files in .ZIP format</li>
+                                        <li>Word: Submit .doc or .docx file</li>
+                                        <li>Must strictly follow the IET format guidelines</li>
+                                        <li>Must include all reviewers' suggested corrections (if applicable)</li>
+                                    </ul>
+                                    <p><b>2. PDF Version </b></p>
+                                    <ul>
+                                        <li>Must match exactly with your source file content</li>
+                                    </ul>
+                                    <p><b>3. Copyright Form </b></p>
+                                    <p>Will be enabled in the submission system only after: </p>
+                                    <ul style="margin-left:20px">
+                                        <li>Successfully uploading your formatted source files and PDF</li>
+                                        <li>Verification that the IET format guidelines are followed</li>
+                                        <li>Confirmation that all applicable reviewers' corrections have been addressed</li>
+                                    </ul>
+                                    <h4>Basic Requirements</h4>
+                                    <ul>
+                                        <li>Written in English following IET conference format</li>
+                                        <li>Length: 4-6 pages (maximum 8 pages)</li>
+                                        <li>Extra page charges apply for papers exceeding 6 pages</li>
+                                        <li>Confirmation that all applicable reviewers' corrections have been addressed</li>
+                                    </ul>
+                                    <h4>Submission Deadline: February 16, 2025</h4>
                                     <ul class="list-group list-group-flush" id="template_cameraready">
                                         <li class="list-group-item d-flex justify-content-between align-items-center">
                                             <div class="file-info">
@@ -645,6 +628,8 @@
 
 
 
+
+
                                                     {% if cp.linkedin %}{{ cp.linkedin }}{% else %}javascript:void(0){% endif %}"
                                                                                  class="btn btn-primary btn-rounded btn-mini"><i
                                                     class="fa fa-linkedin"></i></a></h4>
@@ -696,6 +681,8 @@
 
 
                                                         
+
+
 
 
 
