--- a/templates/public/landing/landing_copy.html
+++ b/templates/public/landing/landing_copy.html
@@ -443,8 +443,10 @@
                                         <li>Must match exactly with your source file content</li>
                                     </ul>
                                     <p><b>3. Copyright Form </b></p>
-                                    <p>Will be enabled in the submission system only after: </p>
-                                    <ul style="margin-left:20px">
+                                    <ul>
+                                        <li>Will be enabled in the submission system only after: </li>
+                                    </ul>
+                                    <ul style="margin-left:50px">
                                         <li>Successfully uploading your formatted source files and PDF</li>
                                         <li>Verification that the IET format guidelines are followed</li>
                                         <li>Confirmation that all applicable reviewers' corrections have been addressed</li>
