--- a/templates/public/landing/landing_copy.html
+++ b/templates/public/landing/landing_copy.html
@@ -435,7 +435,7 @@
                                         <li>Download templates: <b><a href="/static/iet.bst" download="iet.bst" class="btn-link text-primary">LaTeX Template</a></b>  <b><a href="/static/ictiair25_word_Template%20(1).docx" download="word_template.docx" class="btn-link text-primary ps-1">Word Template</a></b> </li>
                                         <li>LaTeX: Submit all source files in .ZIP format</li>
                                         <li>Word: Submit .doc or .docx file</li>
-                                        <li>Must strictly follow the IET format guidelines</li>
+                                        <li>Must strictly follow the IET format guidelines (Please, download the camera ready guide file and follow carefully the formatting requirements)</li>
                                         <li>Must include all reviewers' suggested corrections (if applicable)</li>
                                     </ul>
                                     <p><b>2. PDF Version </b></p>
@@ -448,12 +448,12 @@
                                     </ul>
                                     <ul style="margin-left:50px">
                                         <li>Successfully uploading your formatted source files and PDF</li>
-                                        <li>Verification that the IET format guidelines are followed</li>
+                                        <li>Verification that the IET format guidelines are followed (Please, download the camera ready guide file and follow carefully the formatting requirements)</li>
                                         <li>Confirmation that all applicable reviewers' corrections have been addressed</li>
                                     </ul>
                                     <h4>Basic Requirements</h4>
                                     <ul>
-                                        <li>Written in English following IET conference format</li>
+                                        <li>Written in English following IET conference format (Please, download the camera ready guide file and follow carefully the formatting requirements)</li>
                                         <li>Length: 4-6 pages (maximum 8 pages)</li>
                                         <li>Extra page charges apply for papers exceeding 6 pages</li>
                                         <li>Confirmation that all applicable reviewers' corrections have been addressed</li>
