--- a/templates/public/landing/register.html
+++ b/templates/public/landing/register.html
@@ -3,6 +3,12 @@
 {% block head %}
     <link rel="stylesheet" href="/static/views.css">
     <link rel="stylesheet" href="/static/register.css">
+    <style>
+        .select2-selection {
+            height: 50px !important;
+            padding-top: 10px;
+        }
+    </style>
 {% endblock %}
 {% block content %}
     <div class="mt-125 p-3">
@@ -158,7 +164,8 @@
                             <h3><i class="fas fa-calendar-alt mr-2"></i> {{ conference.title }}</h3>
                         </div>
                         <div class="card-body">
-                            <img src="/static/images/landing/4.jpeg" alt="{{ conference.title }}"  class="conference-image" style="width: 100%">
+                            <img src="/static/images/landing/4.jpeg" alt="{{ conference.title }}"
+                                 class="conference-image" style="width: 100%">
                             <p class="mb-4" style="font-size: 12px">{{ conference.get_summary.description }}</p>
                             <div class="date-info">
                                 <i class="fa fa-calendar"></i>
@@ -189,8 +196,9 @@
 {% endblock %}
 {% block jscript %}
     <script src="/static/js/forms.js?version=13"></script>
+    <link href="/static/selectmultiple/select2.min.css?1" rel="stylesheet">
+    <script src="/static/selectmultiple/select2.min.js"></script>
     <script>
-
         const config = {
             ADDITIONAL_PAPER_PRICE: parseFloat('{{ conference.value_adittional_paper|default:0 }}'.replace(',', '.')),
             EXTRA_SHEET_PRICE: parseFloat('{{ conference.value_adittional_sheet|default:0 }}'.replace(',', '.')),
@@ -377,5 +385,59 @@
 
             return true;
         }
+
+        $(function () {
+
+            ItemsDisplay = function (item) {
+                if (item.name) {
+                    return $('<span>' + item.name + '</span>');
+                } else {
+                    if (item.text) {
+                        return $('<span>' + item.text + '</span>');
+                    } else {
+                        return 'Search your country';
+                    }
+                }
+            };
+
+            $('#id_country').val('{{ request.user.pais.pk }}').trigger("change");
+
+            $("#id_country").select2({
+                width: '100%',
+                placeholder: "Search your country",
+                allowClear: true,
+                ajax: {
+                    url: function (params) {
+                        return "{{ request.path }}?action=buscarpais&q=" + params.term;
+                    },
+                    dataType: 'json',
+                    delay: 250,
+                    data: function (params) {
+                        return {
+                            q: params.term,
+                            page: params.page
+                        };
+                    },
+                    processResults: function (data, params) {
+                        params.page = params.page || 1;
+                        return {
+                            results: data.results,
+                            pagination: {
+                                more: (params.page * 30) < data.total_count
+                            }
+                        };
+                    },
+                    cache: true
+                },
+                escapeMarkup: function (markup) {
+                    return markup;
+                },
+                minimumInputLength: 1,
+                templateResult: ItemsDisplay,
+                templateSelection: ItemsDisplay
+            }).on("select2:select", function (evt) {
+                $("#id_country").attr({"value": (evt.params.data.id)});
+            });
+        })
     </script>
 {% endblock %}
