--- a/templates/public/navbar.html
+++ b/templates/public/navbar.html
@@ -40,6 +40,11 @@
                                 <a href="{% if request.path == '/' %}/#cameraready{% else %}/{% endif %}">Camera
                                     Ready</a>
                             </li>
+                            {% if request.user.is_authenticated %}
+                                <li>
+                                    <a href="{% if request.path == '/' %}/#section-register{% else %}/{% endif %}">Register<span></span></a>
+                                </li>
+                            {% endif %}
                         </ul>
                     </li>
                     {% if not request.user.is_authenticated %}
