--- a/templates/public/landing/landing_copy.html
+++ b/templates/public/landing/landing_copy.html
@@ -749,6 +749,9 @@
                     <div class="separator"><span><i class="fa fa-square"></i></span></div>
                     <div class="spacer-single"></div>
                 </div>
+{#                <div class="col-lg-12 text-center">#}
+{#                    <h3>Available Soon</h3>#}
+{#                </div>#}
                 <div class="container text-light">
                     <div class="row d-flex justify-content-center align-items-stretch">
                         {% for item in fees %}
