fix: update payment method and file upload restrictions

--- a/templates/public/complete_purchase/modal_transferencia.html
+++ b/templates/public/complete_purchase/modal_transferencia.html
@@ -31,7 +31,7 @@
         $('#id_archivo').makeDropzone({
             icon: 'cloud-upload',
             maxSize: 4,
-            acceptedFormats: '.jpg,.jpeg,.png'
+            acceptedFormats: '.pdf'
         });
 
     });
