--- a/templates/public/complete_purchase/view.html
+++ b/templates/public/complete_purchase/view.html
@@ -225,7 +225,7 @@
                                 <h6 class="fw-normal text-body text-uppercase pt-2">4.<span
                                         class="text-decoration-underline ms-1">Payment method</span></h6>
                                 <div class="form-check mb-4">
-                                    <input class="form-check-input metodo_pago" type="radio" name="metodo_pago"
+                                    <input class="form-check-input metodo_pago" type="radio" name="metodo_pago" checked
                                            required
                                            id="id_metodo_pago_transferencia" value="TRANSFERENCIA_BANCARIA">
                                     <label class="form-check-label" for="id_metodo_pago_transferencia">
@@ -287,7 +287,7 @@
                                     <label class="form-check-label" for="id_metodo_pago_paypal">
                                     <span>
                                         <span class="d-block text-dark fw-medium mb-1">Paypal <span
-                                                class="ms-2 text-danger">* Available soon.</span></span>
+                                                class="ms-2 text-danger">* Available soon. We will send an email when it's ready.</span></span>
                                         <span class="text-body">Pay from the platform. (for international payments)</span>
                                     </span>
                                     </label>
