--- a/templates/public/landing/register_autors.html
+++ b/templates/public/landing/register_autors.html
@@ -187,10 +187,10 @@
                                                 </div>
                                                 <h3><i class="fa fa-book mr-2 mt-2"></i> Additional Papers</h3>
                                                 <p>
-                                                    Register up to <b>{{ conference.max_papers }}</b> additional
-                                                    papers,
+                                                    Register up to one (<b>{{ conference.max_papers }}</b>) additional
+                                                    paper,
                                                     ensuring all required information is provided.
-                                                    Each additional paper incurs an extra charge. You may include up
+                                                    Additional paper incurs an extra charge. You may include up
                                                     to
                                                     <b>{{ conference.base_sheets }}</b> pages within the base price,
                                                     with a maximum of <b>{{ conference.max_sheets }}</b> pages in
@@ -211,35 +211,35 @@
                                                         </tbody>
                                                     </table>
                                                 </div>
-{#                                                <div class="mt-3"></div>#}
-{#                                                <p>To complete your order, you must select an option for the#}
-{#                                                    following#}
-{#                                                    questions.</p>#}
-{#                                                <b for="paymentOrigin"><i class="fa fa-info-circle me-2"></i>Please#}
-{#                                                    specify#}
-{#                                                    the#}
-{#                                                    origin of your payment <span#}
-{#                                                            style="color:red;margin-left:2px;"><strong>*</strong></span>#}
-{#                                                    :</b>#}
-{#                                                <select id="paymentOrigin" class="form-control select2"#}
-{#                                                        name="paymentOrigin">#}
-{#                                                    <option value="" disabled selected>Select an option</option>#}
-{#                                                    {% for p in PAYMENT_ORIGIN %}#}
-{#                                                        <option value="{{ p.0 }}">{{ p.1 }}</option>#}
-{#                                                    {% endfor %}#}
-{#                                                </select>#}
-{#                                                <div class="mt-3"></div>#}
-{#                                                <b for="invoiceOption"><i class="fa fa-info-circle me-2"></i>Do you#}
-{#                                                    need an#}
-{#                                                    electronic invoice?<span style="color:red;margin-left:2px;"><strong>*</strong></span>#}
-{#                                                    :</b>#}
-{#                                                <select id="invoiceOption" class="form-control select2"#}
-{#                                                        name="invoiceOption">#}
-{#                                                    <option value="" disabled selected>Select an option</option>#}
-{#                                                    {% for i in INVOICE_OPTIONS %}#}
-{#                                                        <option value="{{ i.0 }}">{{ i.1 }}</option>#}
-{#                                                    {% endfor %}#}
-{#                                                </select>#}
+                                                {#                                                <div class="mt-3"></div>#}
+                                                {#                                                <p>To complete your order, you must select an option for the#}
+                                                {#                                                    following#}
+                                                {#                                                    questions.</p>#}
+                                                {#                                                <b for="paymentOrigin"><i class="fa fa-info-circle me-2"></i>Please#}
+                                                {#                                                    specify#}
+                                                {#                                                    the#}
+                                                {#                                                    origin of your payment <span#}
+                                                {#                                                            style="color:red;margin-left:2px;"><strong>*</strong></span>#}
+                                                {#                                                    :</b>#}
+                                                {#                                                <select id="paymentOrigin" class="form-control select2"#}
+                                                {#                                                        name="paymentOrigin">#}
+                                                {#                                                    <option value="" disabled selected>Select an option</option>#}
+                                                {#                                                    {% for p in PAYMENT_ORIGIN %}#}
+                                                {#                                                        <option value="{{ p.0 }}">{{ p.1 }}</option>#}
+                                                {#                                                    {% endfor %}#}
+                                                {#                                                </select>#}
+                                                {#                                                <div class="mt-3"></div>#}
+                                                {#                                                <b for="invoiceOption"><i class="fa fa-info-circle me-2"></i>Do you#}
+                                                {#                                                    need an#}
+                                                {#                                                    electronic invoice?<span style="color:red;margin-left:2px;"><strong>*</strong></span>#}
+                                                {#                                                    :</b>#}
+                                                {#                                                <select id="invoiceOption" class="form-control select2"#}
+                                                {#                                                        name="invoiceOption">#}
+                                                {#                                                    <option value="" disabled selected>Select an option</option>#}
+                                                {#                                                    {% for i in INVOICE_OPTIONS %}#}
+                                                {#                                                        <option value="{{ i.0 }}">{{ i.1 }}</option>#}
+                                                {#                                                    {% endfor %}#}
+                                                {#                                                </select>#}
 
                                             </div>
                                         </div>
@@ -253,10 +253,6 @@
                                             <div class="row">
                                                 <div class="mt-4">
                                                     <h4><i class="fa fa-shopping-bag me-2"></i>Order Summary</h4>
-                                                    <button type="button" id="generateSummary"
-                                                            class="btn btn-success btn-sm">
-                                                        <i class="fa fa-save"></i> Click here to Save your order
-                                                    </button>
                                                     <div class="table-responsive">
                                                         <table class="table" id="summaryTable">
                                                             <thead>
@@ -276,7 +272,6 @@
                                                                     <strong>Total:</strong>
                                                                 </td>
                                                                 <td class="text-right">
-
                                                                     <div class="price-highlight">
                                                                         <i class="fa fa-money mr-2"></i> $ <span
                                                                             id="summaryTotal"
@@ -287,25 +282,6 @@
                                                             </tfoot>
                                                         </table>
                                                     </div>
-                                                    <p class="mt-2"><i class="fa fa-info-circle me-2"></i>Upon
-                                                        completing
-                                                        your
-                                                        order, you will receive an email with the payment
-                                                        details. Please check your inbox for the email registered on
-                                                        this
-                                                        platform,
-                                                        not on the CM3 platform.</p>
-                                                    <p class="mt-2"><i class="fa fa-info-circle me-2"></i>If the
-                                                        number of pages exceeds the allowed limit or if the
-                                                        provided information is incorrect, I will be responsible for
-                                                        covering any additional costs and management fees.</p>
-                                                    <div class="form-check mt-3">
-                                                        <label class="form-check-label me-2" for="acceptTerms">
-                                                            <b>I have read and accept the Conditions.</b>
-                                                        </label>
-                                                        <input class="form-check-input" type="checkbox" id="acceptTerms" required>
-                                                    </div>
-
                                                 </div>
                                             </div>
                                         </div>
@@ -399,39 +375,42 @@
             }
             checkEmptyTable();
             updateTotalPrice();
+            generateOrderSummary();
         });
 
         function createPaperOptions() {
             const select = `
-                <div class="mb-2">
-                <label for="paperCount"><b>If you have additional papers, select the number you wish to register:</b></label>
-                    <select id="paperCount" class="form-control select2">
-                        <option value="0">0 (No additional papers)</option>
-                        ${Array.from({length: config.MAX_PAPERS}, (_, i) => i + 1)
+        <div class="mb-2">
+        <label for="paperCount"><b>If you have additional paper:</b></label>
+            <select id="paperCount" class="form-control select2">
+                <option value="0" selected>0 (No additional paper)</option>
+                ${Array.from({length: config.MAX_PAPERS}, (_, i) => i + 1)
                 .map(num => `<option value="${num}">${num}</option>`)
                 .join('')}
-                    </select>
-                </div>
-            `;
+            </select>
+        </div>
+    `;
             $('#addPapersContainer').html(select);
         }
 
         function initializeListeners() {
-            $('input[name="sheets_principal"]').on('change', function () {
+            // Listener para cambios en el paper principal
+            $('input[name="sheets_principal"], input[name="id_principal"], input[name="title_principal"]').on('input change', function () {
                 updateTotalPrice();
+                generateOrderSummary();
             });
 
+            // Listener para el combo de papers adicionales
             $('#paperCount').on('change', function () {
                 const count = parseInt($(this).val()) || 0;
                 generatePaperRows(count);
                 updateTotalPrice();
+                generateOrderSummary();
             });
 
-            $('#tbPapers').on('change', 'input', function () {
+            // Listener para cambios en la tabla de papers adicionales
+            $('#tbPapers').on('input change', 'input', function () {
                 updateTotalPrice();
-            });
-
-            $('#generateSummary').on('click', function () {
                 generateOrderSummary();
             });
         }
@@ -463,7 +442,7 @@
         }
 
         function calculateMainPaperPrice() {
-            const basePrice = parseInt($('#value-counter').data('base-price')) || 0;
+            const basePrice = parseInt($('#summaryTotal').data('base-price')) || 0;
             const sheets = parseInt($('input[name="sheets_principal"]').val()) || 0;
             let price = basePrice;
 
@@ -502,14 +481,10 @@
             tbody.empty();
             let totalCost = 0;
 
+            // Siempre mostrar el paper principal
             const mainPaperId = $('input[name="id_principal"]').val();
             const mainPaperTitle = $('input[name="title_principal"]').val();
             const mainPaperSheets = parseInt($('input[name="sheets_principal"]').val()) || 0;
-
-            if (!mainPaperId || !mainPaperTitle || !mainPaperSheets) {
-                alertaWarning('Please complete the main paper information before generating the summary.');
-                return;
-            }
 
             let mainPaperValue = parseInt($('#summaryTotal').data('base-price')) || 0;
             if (mainPaperSheets > config.BASE_SHEETS) {
@@ -517,26 +492,28 @@
             }
 
             tbody.append(`
-            <tr>
-                <td class="text-center"><i class="text-success fa fa-check-circle"></i></td>
-                <td class="text-center">${mainPaperId}</td>
-                <td class="text-center">${mainPaperTitle}</td>
-                <td class="text-center">${mainPaperSheets}</td>
-                <td class="text-right">${mainPaperValue.toLocaleString()}</td>
-            </tr>
-        `);
+        <tr>
+            <td class="text-center"><i class="text-success fa fa-check-circle"></i></td>
+            <td class="text-center">${mainPaperId || '(Pending)'}</td>
+            <td class="text-center">${mainPaperTitle || '(Pending)'}</td>
+            <td class="text-center">${mainPaperSheets || 0}</td>
+            <td class="text-right">${mainPaperValue.toLocaleString()}</td>
+        </tr>
+    `);
             totalCost += mainPaperValue;
 
-            $('#tbPapers tr').each(function () {
-                if ($(this).closest('tr').find('#emptyMessage').length) {
-                    return;
-                }
+            // Solo procesar papers adicionales si hay alguno seleccionado
+            const additionalPapersCount = parseInt($('#paperCount').val()) || 0;
+            if (additionalPapersCount > 0) {
+                $('#tbPapers tr').each(function () {
+                    if ($(this).closest('tr').find('#emptyMessage').length) {
+                        return;
+                    }
 
-                const idpaper = $(this).find('input[type="text"]').eq(0).val();
-                const title = $(this).find('input[type="text"]').eq(1).val();
-                const sheets = parseInt($(this).find('input[type="number"]').val()) || 0;
+                    const idpaper = $(this).find('input[type="text"]').eq(0).val();
+                    const title = $(this).find('input[type="text"]').eq(1).val();
+                    const sheets = parseInt($(this).find('input[type="number"]').val()) || 0;
 
-                if (idpaper && title && sheets) {
                     let paperValue = config.ADDITIONAL_PAPER_PRICE;
                     if (sheets > config.BASE_SHEETS) {
                         paperValue += (sheets - config.BASE_SHEETS) * config.EXTRA_SHEET_PRICE;
@@ -545,15 +522,15 @@
                     tbody.append(`
                 <tr>
                     <td class="text-center"><i class="text-danger fa fa-times-circle"></i></td>
-                    <td class="text-center">${idpaper}</td>
-                    <td class="text-center">${title}</td>
-                    <td class="text-center">${sheets}</td>
+                    <td class="text-center">${idpaper || '(Pending)'}</td>
+                    <td class="text-center">${title || '(Pending)'}</td>
+                    <td class="text-center">${sheets || 0}</td>
                     <td class="text-right">${paperValue.toLocaleString()}</td>
                 </tr>
             `);
                     totalCost += paperValue;
-                }
-            });
+                });
+            }
 
             $('#summaryTotal').text(`${totalCost.toLocaleString()}`);
             $('#summarySection').slideDown();
@@ -563,12 +540,12 @@
             const rowCount = $("#tbPapers tr").length;
             if (rowCount === 0) {
                 $("#tbPapers").html(`
-                <tr id="emptyMessage">
-                    <td colspan="3" class="text-center text-muted">
-                        No additional papers registered
-                    </td>
-                </tr>
-            `);
+            <tr id="emptyMessage">
+                <td colspan="3" class="text-center text-muted">
+                    No additional papers registered
+                </td>
+            </tr>
+        `);
             } else {
                 $("#emptyMessage").remove();
             }
@@ -655,6 +632,7 @@
                     keyNavigation: false,
                 },
             });
+
             ItemsDisplay = function (item) {
                 if (item.name) {
                     return $('<span>' + item.name + '</span>');
