--- a/templates/pedidos/pedido/listado.html
+++ b/templates/pedidos/pedido/listado.html
@@ -182,6 +182,14 @@
                                             </a>
                                         {% endif %}
                                     {% endif %}
+
+                                    {% if request.user.is_superuser %}
+                                        <a class="dropdown-item" title="Eliminar {{ modulo }}"
+                                           onclick="eliminarajax({{ l.pk }}, '{{ l.pk }}', 'deletepedido')"
+                                           href="javascript:void(0);">
+                                            <i class="fas fa-trash"></i> Eliminar
+                                        </a>
+                                    {% endif %}
                                 </div>
                             </div>
                         </td>
