feat: add user information and terms acceptance to registration form

--- a/templates/public/landing/register_autors.html
+++ b/templates/public/landing/register_autors.html
@@ -282,6 +282,24 @@
                                                             </tfoot>
                                                         </table>
                                                     </div>
+                                                    <p class="mt-2"><i class="fa fa-info-circle me-2"></i>Upon
+                                                        completing
+                                                        your
+                                                        order, you will receive an email with the payment
+                                                        details. Please check your inbox for the email registered on
+                                                        this
+                                                        platform,
+                                                        not on the CM3 platform.</p>
+                                                    <p class="mt-2"><i class="fa fa-info-circle me-2"></i>If the
+                                                        number of pages exceeds the allowed limit or if the
+                                                        provided information is incorrect, I will be responsible for
+                                                        covering any additional costs and management fees.</p>
+                                                    <div class="form-check mt-3">
+                                                        <label class="form-check-label me-2" for="acceptTerms">
+                                                            <b>I have read and accept the Conditions.</b>
+                                                        </label>
+                                                        <input class="form-check-input" type="checkbox" id="acceptTerms" required>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
